# openrc-runhooks-plugin

./: .autotools  .cproject  .cvsignore  .gitignore  .project  AUTHORS  Makefile.am  autogen.sh  configure.ac
m4/: .cvsignore
src/: openrc-runhooks-plugin.c
